--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-ri ght">
         <li class="active"><a href="#section1">About<span class="sr-only">About</span></a></li>
+        <li><a href="#section5">Reflection</a></li>
         <li><a href="#section2">track and basketball</a></li>
         <li><a href="#section4">Contact</a></li>
+        <li><a href="#section5">Reflection</a></li>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -45,16 +48,24 @@
      <div class="row">
        <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-2 col-md-3 col-md-offset-3">
          <div id="about"><p>Hello!<br></br>
-           My name is dawit and I am currently going to berkeley high and going to the 10th grade.
+           My name is dawit and I am currently going to berkeley high and going to the 10th grade. I run track and play basketball. I am one of the best freshamns to ever run at berkeley high.
        </div>
        <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 col-md-3 col-md-offset-0"><img class="center-block" id="portrait-img" src="img/IMG_4383.jpg" alt="portrait image"></img>
 </div>
      </div>
       </div>
         <hr>
+<div class="jumbotron" id="section5">
+  <h2>Projects</h2>
+  <a id="dice-game" href="/Users/hgpmac152/Downloads/Dicee Challenge - Starting Files 2/dicee.html">Dice Game</a>
+</div>
+
+
+
+
         <div id="section2">
           <div>
-            <h2 class="track and basketball">track and basketbal</h2>
+            <h2 class="container-fluid">track and basketbal</h2>
             <div class="row">
               <div class="column">
                 <img src="img/IMG_0101.jpeg" alt="d1" style="width:40%">
