--- a/index.html
+++ b/index.html
@@ -1,229 +1,43 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Muli" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.0.0/bootstrap-social.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-
+  <meta charset="utf-8">
+  <title>Simon</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-<nav class="navbar navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#section0">Dawit fesseha</a>
+
+<body>
+  <h1 id="level-title">Press A Key to Start</h1>
+  <div class="container">
+    <div lass="row">
+
+      <div type="button" id="green" class="btn green">
+
+      </div>
+
+      <div type="button" id="red" class="btn red">
+
+      </div>
     </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-ri ght">
-        <li class="active"><a href="#section1">About<span class="sr-only">About</span></a></li>
-        <li><a href="#section5">Reflection</a></li>
-        <li><a href="#section2">track and basketball</a></li>
-        <li><a href="#section4">Contact</a></li>
-        <li><a href="#section5">Reflection</a></li>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
 
-<!-- Content!! -->
-<div class="jumbotron" id="section0">
-              <div class="text-center">
-              <h3>Dawit fesseha</h4>
-              <h4>track and field & basketball</h2>
-        </div>
-</div>
+    <div class="row">
 
-<div class="container-fluid">
-   <div id="section1">
-     <h2>About me</h2>
-     <div class="row">
-       <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-2 col-md-3 col-md-offset-3">
-         <div id="about"><p>Hello!<br></br>
-           My name is dawit and I am currently going to berkeley high and going to the 10th grade. I run track and play basketball. I am one of the best freshamns to ever run at berkeley high.
-       </div>
-       <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 col-md-3 col-md-offset-0"><img class="center-block" id="portrait-img" src="img/IMG_4383.jpg" alt="portrait image"></img>
-</div>
-     </div>
+      <div type="button" id="yellow" class="btn yellow">
+
       </div>
-        <hr>
-<div class="jumbotron" id="section5">
-  <h2>Projects</h2>
-  <a id="dice-game" href="/Users/hgpmac152/Downloads/Dicee Challenge - Starting Files 2/dicee.html">Dice Game</a>
-</div>
+      <div type="button" id="blue" class="btn blue">
 
-
-
-
-        <div id="section2">
-          <div>
-            <h2 class="container-fluid">track and basketbal</h2>
-            <div class="row">
-              <div class="column">
-                <img src="img/IMG_0101.jpeg" alt="d1" style="width:40%">
-              </div>
-              <div class="column">
-                <img src="img/IMG_0103.jpeg" alt="d2" style="width:40%">
-              </div>
-              <div class="column">
-                <img src="img/IMG_0690.jpeg" alt="d3" style="width:40%">
-              </div>
-              <div class="column">
-                <img src="img/IMG1.jpeg" alt="d4" style="width:40%">
-              </div>
-
-
-
-
-            <div classs ="row graphic-portfolio-items">
-              <figure class="portfolio-item col-xs-12 col-sm-4">
-             <a href="#" data-toggle="modal" data-target="#firstGD"></a></figure>
-
-
-<!-- Modal -->
-    <div id="firstGD" class= "modal fade" >
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h2>Ladybug Pattern</h5>
-                </div>
-                <div class="modal-body">
-              <hr>
-              <p class="text-center">Pattern created in Adobe Illustrator.</p>
-                </div>
-            </div>
       </div>
-   </div>
-          <!-- end modal -->
 
-           <figure class="portfolio-item col-xs-12 col-sm-4">
+    </div>
 
-<!-- Modal -->
-    <div id="secondGD" class= "modal fade" >
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h2>Mothers' Day Web Ad</h5>
-                </div>
-                <div class="modal-body">
-                  <img class="img-responsive" style="max-height:400px;" src="https://s18.postimg.org/gr28vctih/mothersdayad.jpg" alt="Mothers' Day Ad"></img>
-              <hr>
-                    <p class="text-center">Themed promotion for Austin Monthly Magazine.</p>
-                </div>
-            </div>
-      </div>
-   </div>
- <!-- end modal -->
-                  <figure class="portfolio-item col-xs-12 col-sm-4">
-
-<!-- Modal -->
-    <div id="thirdGD" class= "modal fade" >
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h2>Sauce Nametags</h5>
-              </div>
-                <div class="modal-body">
-                  <img class="img responsive" style="max-height:400px" src="https://s13.postimg.org/gwr3ead3r/nametags.jpg" alt="sauce nametags"></img>
-              <hr>
-                    <p class="text-center">Nametags designed for my co-workers based on their favorite sauce.</p>
-                </div>
-            </div>
-      </div>
-   </div>
-          <!-- end modal -->
-
-          </div> <!-- end row -->
-        </div>
-
-        <hr>
-        <div id="section3">
-         <div class="row web-portfolio-items">
-              <figure class="portfolio-item col-xs-12 col-sm-5 col-sm-offset-1">
-          <!-- modal -->
-          <!-- end modal -->
-          <figure class="portfolio-item col-xs-12 col-sm-5">
-      <!-- modal -->
-          <!-- end modal -->
-</div>
-        </div>
-</div> <!-- end container -->
-<div class="container-fluid" id="contact">
-        <hr id="lastHR">
-        <div id="section4">
-          <h2>Contact</h2>
-            <div class="row">
-              <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-2">
-            <form>
-  <div class="form-group">
-    <label for="inputName">Name</label>
-      <input type="text" class="form-control" id="inputName" placeholder="name">
-                                                                          </div>
-
-  <div class="form-group">
-    <label for="inputEmail">Email</label>
-    <input type="email" class="form-control" id="inputEmail" placeholder="email">
   </div>
 
-  <div class="form-group">
-    <label for="inputMessage">Message</label>
-    <textarea class="form-control" rows="5" id="message" placeholder="message"></textarea>
-  </div>
-
-  <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-                </div>
-
-            <div class="col-sm-4 text-center">
-              <h3>Find me online</h3>
-              <a href="https://www.youtube.com/channel/UC10JJ3wu4ENWktoXtLiShHQ" target="_blank"><i class="fa fa-youtube-square fa-4x"></i></a>
-              <a href="https://www.instagram.com/syndawit/" target="_blank"><i class="fa fa-instagram fa-4x>" id="instagram"></i></a>
-            </div>
-</div>
-            </div>
-</div>
-
-        <hr>
-<div class="row">
-  <div class="col-xs-12">
-    <p class="text-center">Created by Dawit Fesseha &copy; 2019</p>
-  </div>
-</div>
-</div>
-
-
-</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="game.js" charset="utf-8"></script>
 
 </body>
 
-
-
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- -->
