--- a/leadership.html
+++ b/leadership.html
@@ -17,6 +17,12 @@
     </ul>
 
 <h1>Leadership</h1>
+<h2>How we should treat our woman</h2>
+<img src="" alt="">
+<p></p>
+<ul>
+  <li></li>
+</ul>
 
 <ol>
     <li>july 1</li><br>
